tests/ui/require_with_direct_mode.stderr
error: `require` cannot be used with direct mode `try -> T { }`. Direct mode guarantees success, but `require` can fail. Use `try { }` instead of `try -> T { }`
 --> tests/ui/require_with_direct_mode.rs:8:9
  |
8 |         try -> i32 { Ok::<i32, &str>(42)? }
  |         ^^^
